<resources>
    <string name="app_name">TalkingCalculator</string>
    <string name="general">General</string>
    <string name="scintific">Scintific</string>
    <string name="databaseHistory">History</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiplication">*</string>
    <string name="divide">/</string>
    <string name="openingbraket">(</string>
    <string name="closingbracket">)</string>
    <string name="dot">.</string>
    <string name="sin">Sin</string>
    <string name="cos">Cos</string>
    <string name="tan">Tan</string>
    <string name="ln">ln</string>
    <string name="root">√ </string>
    <string name="square">x²</string>
    <string name="ex">e</string>
    <string name="mod">%</string>
    <string name="clear">C</string>
    <string name="allclear">CE</string>
    <string name="back">BACK</string>
    <string name="equal">=</string>
</resources>
