<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="22dp"
    tools:context=".MyApplication.Scientific">


    <TextView
        android:id="@+id/output"
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:textSize="50dp"/>

    <TextView
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:layout_below="@+id/output"
        android:textSize="50dp"/>

    <Button
        android:id="@+id/button_11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/allclear"
        android:textSize="35sp"
        android:textColor="@color/btext"
        android:layout_marginRight="5dp"
        android:background="@color/colorbutton1"
        android:layout_below="@+id/input"/>

    <Button
        android:id="@+id/button_12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/openingbraket"
        android:textSize="35sp"
        android:textColor="@color/btext"
        android:layout_marginRight="5dp"
        android:background="@color/colorbutton1"
        android:layout_below="@+id/input"
        android:layout_toRightOf="@id/button_11"/>

    <Button
        android:id="@+id/button_13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/closingbracket"
        android:textSize="35sp"
        android:textColor="@color/btext"
        android:layout_marginRight="5dp"
        android:background="@color/colorbutton1"
        android:layout_below="@id/input"
        android:layout_toRightOf="@id/button_12"/>

    <Button
        android:id="@+id/button_14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mod"
        android:textSize="35sp"
        android:textColor="@color/btext"
        android:background="@color/colorbutton1"
        android:layout_below="@id/input"
        android:layout_toEndOf="@+id/button_13"/>

    <Button
        android:id="@+id/button_15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ln"
        android:textSize="35sp"
        android:textColor="@color/btext"
        android:layout_marginTop="5dp"
        android:background="@color/colorbutton1"
        android:layout_below="@id/button_11"/>

    <Button
        android:id="@+id/button_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ex"
        android:textSize="35sp"
        android:textColor="@color/btext"
        android:layout_margin="5dp"
        android:background="@color/colorbutton1"
        android:layout_below="@id/button_12"
        android:layout_toRightOf="@id/button_15"/>

    <Button
        android:id="@+id/button_17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/square"
        android:textSize="35sp"
        android:textColor="@color/btext"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorbutton1"
        android:layout_below="@id/button_13"
        android:layout_toRightOf="@id/button_16"/>

    <Button
        android:id="@+id/button_18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/button_3"
        android:text="@string/root"
        android:background="@color/colorbutton1"
        android:textSize="35sp"
        android:textColor="@color/btext"
        android:layout_marginTop="5dp"
        android:layout_below="@id/button_14"
        android:layout_toRightOf="@id/button_17"/>

    <Button
        android:id="@+id/button_19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sin"
        android:textSize="35sp"
        android:textColor="@color/btext"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/colorbutton1"
        android:layout_below="@id/button_15" />

    <Button
        android:id="@+id/button_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cos"
        android:textSize="35sp"
        android:textColor="@color/btext"
        android:background="@color/colorbutton1"
        android:layout_below="@id/button_16"
        android:layout_toRightOf="@id/button_19"/>

    <Button
        android:id="@+id/button_21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tan"
        android:textSize="35sp"
        android:textColor="@color/btext"
        android:layout_margin="5dp"
        android:background="@color/colorbutton1"
        android:layout_below="@id/button_17"
        android:layout_toRightOf="@id/button_20"/>

    <Button
        android:id="@+id/button_22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus"
        android:textSize="35sp"
        android:textColor="@color/btext"
        android:layout_marginTop="5dp"
        android:background="@color/colorbutton1"
        android:layout_below="@id/button_18"
        android:layout_toRightOf="@id/button_21"/>

    <Button
        android:id="@+id/button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one"
        android:textSize="35sp"
        android:textColor="@color/btext"
        android:layout_marginTop="5dp"
        android:background="@color/colorbutton1"
        android:layout_below="@id/button_19"/>

    <Button
        android:id="@+id/button_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/two"
        android:textSize="35sp"
        android:textColor="@color/btext"
        android:layout_margin="5dp"
        android:background="@color/colorbutton1"
        android:layout_below="@id/button_20"
        android:layout_toRightOf="@id/button_1"/>

    <Button
        android:id="@+id/button_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/three"
        android:textSize="35sp"
        android:textColor="@color/btext"
        android:layout_marginRight="5dp"
        android:background="@color/colorbutton1"
        android:layout_below="@id/button_21"
        android:layout_toRightOf="@id/button_2"/>

    <Button
        android:id="@+id/button_23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minus"
        android:textSize="35sp"
        android:textColor="@color/btext"
        android:layout_marginTop="5dp"
        android:background="@color/colorbutton1"
        android:layout_below="@id/button_22"
        android:layout_toRightOf="@id/button_3"/>

    <Button
        android:id="@+id/button_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/four"
        android:textSize="35sp"
        android:textColor="@color/btext"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/colorbutton1"
        android:layout_below="@id/button_1"/>

    <Button
        android:id="@+id/button_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/five"
        android:textSize="35sp"
        android:textColor="@color/btext"
        android:background="@color/colorbutton1"
        android:layout_below="@id/button_2"
        android:layout_toRightOf="@id/button_4"/>

    <Button
        android:id="@+id/button_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/six"
        android:textSize="35sp"
        android:textColor="@color/btext"
        android:layout_margin="5dp"
        android:background="@color/colorbutton1"
        android:layout_below="@id/button_3"
        android:layout_toRightOf="@id/button_5"/>

    <Button
        android:id="@+id/button_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiplication"
        android:textSize="35sp"
        android:textColor="@color/btext"
        android:layout_marginTop="5dp"
        android:layout_below="@id/button_23"
        android:background="@color/colorbutton1"
        android:layout_toRightOf="@id/button_6"/>

    <Button
        android:id="@+id/button_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seven"
        android:textSize="35sp"
        android:textColor="@color/btext"
        android:layout_marginTop="5dp"
        android:background="@color/colorbutton1"
        android:layout_below="@id/button_4"/>

    <Button
        android:id="@+id/button_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eight"
        android:textSize="35sp"
        android:textColor="@color/btext"
        android:layout_margin="5dp"
        android:background="@color/colorbutton1"
        android:layout_below="@id/button_5"
        android:layout_toRightOf="@id/button_7"/>

    <Button
        android:id="@+id/button_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nine"
        android:textSize="35sp"
        android:textColor="@color/btext"
        android:layout_marginRight="5dp"
        android:background="@color/colorbutton1"
        android:layout_below="@id/button_6"
        android:layout_toRightOf="@id/button_8"/>

    <Button
        android:id="@+id/button_25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/divide"
        android:textSize="35sp"
        android:textColor="@color/btext"
        android:layout_marginTop="5dp"
        android:background="@color/colorbutton1"
        android:layout_below="@id/button_24"
        android:layout_toRightOf="@id/button_9"/>

    <Button
        android:id="@+id/button_26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:textSize="35sp"
        android:textColor="@color/btext"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/colorbutton1"
        android:layout_below="@id/button_7"/>

    <Button
        android:id="@+id/button_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textSize="35sp"
        android:textColor="@color/btext"
        android:layout_marginRight="5dp"
        android:background="@color/colorbutton1"
        android:layout_below="@id/button_8"
        android:layout_toRightOf="@id/button_26"/>

    <Button
        android:id="@+id/button_27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dot"
        android:textSize="35sp"
        android:textColor="@color/btext"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/colorbutton1"
        android:layout_below="@id/button_9"
        android:layout_toRightOf="@id/button_0"/>

    <Button
        android:id="@+id/button_28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/equal"
        android:textSize="35sp"
        android:textColor="@color/btext"
        android:layout_marginTop="5dp"
        android:background="@color/colorbutton1"
        android:layout_below="@id/button_25"
        android:layout_toRightOf="@id/button_27"/>

    <Button
        android:id="@+id/button_29"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textSize="35sp"
        android:textColor="@color/btext"
        android:layout_marginTop="5dp"
        android:background="@color/colorbutton1"
        android:layout_below="@id/button_26"
        android:onClick="gotoMenu"/>


</RelativeLayout>